--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleMediaQueries.css">
+    <link rel="shortcut icon" href="images/caixa-de-votacao.png" type="image/x-icon">
     <title>BLOG</title>
 </head>
 
@@ -26,7 +28,9 @@
     <section id="banner">
        
     </section>
-
+    <section id="candidatosText">
+        <h1>BANDIDATOS PARA PRESIDÊNCIA</h1>
+    </section>
     <section id="candidatos">
         <div id="candidato1" class="candidato">
             <button class="votar">VOTAR</button>
